k8s/infra.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stud
